--- a/_talks/2024-icga-5e.md
+++ b/_talks/2024-icga-5e.md
@@ -2,7 +2,7 @@
 title: "ICGA(Indian Cancer Genome Atlas) 2024 meeting"
 #collection: teaching
 #type: "Undergraduate course"
-permalink: /talsk/2024-icga-53-palliative-ccare-llms
+permalink: /talks/2024-icga-53-palliative-ccare-llms
 venue: "NII(National Institute of Immunology), New Delhi, India"
 date: 2024-09-21
 location: "New Delhi, India"
@@ -10,5 +10,7 @@ location: "New Delhi, India"
 
 Talked about ou work on using LLMs to provide
 trusted healthcare advice using RAG(Retrieval Augmented Generation)
-[Slides](https://docs.google.com/presentation/d/1ZqNTb-rs6pV1jMn9WCSZDnJZuNl2nzhWsNY57hyj-5M/edit)
+[Talk slides](https://docs.google.com/presentation/d/1ZqNTb-rs6pV1jMn9WCSZDnJZuNl2nzhWsNY57hyj-5M/edit)
+
+[ICGA linkedin post](https://www.linkedin.com/posts/icgafoundation_icga2024-cancerresearch-ailinhealthcare-activity-7243556569479585792-rWPm)
 
