--- a/_talks/2024-icga-5e.md
+++ b/_talks/2024-icga-5e.md
@@ -8,9 +8,13 @@ date: 2024-09-21
 location: "New Delhi, India"
 ---
 
-Talked about ou work on using LLMs to provide
-trusted healthcare advice using RAG(Retrieval Augmented Generation)
+Talked about our work on using LLMs to provide
+trusted healthcare advice using [RAG(Retrieval Augmented Generation)](https://blogs.nvidia.com/blog/what-is-retrieval-augmented-generation/)
+
+
 [Talk slides](https://docs.google.com/presentation/d/1ZqNTb-rs6pV1jMn9WCSZDnJZuNl2nzhWsNY57hyj-5M/edit)
 
-[ICGA linkedin post](https://www.linkedin.com/posts/icgafoundation_icga2024-cancerresearch-ailinhealthcare-activity-7243556569479585792-rWPm)
+ICGA linkedin posts :
+1. [here](https://www.linkedin.com/posts/icgafoundation_icga2024-cancerresearch-ailinhealthcare-activity-7243556569479585792-rWPm)
+2. [here](https://www.linkedin.com/feed/update/urn:li:activity:7241392925509632000/)
 
